# nendo-li

./: .gitignore  .gitingore  .readme  DockerFile  README.md  docker-compose.yml  manage.py  pyproject.toml
crawling/crawling-json/: crawling-json.py  crawling_json.py
nendo_li/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
nendoroid/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
nendoroid/migrations/: 0001_initial.py  0002_alter_nendoroidphoto_photo.py  0002_nendoroid_numbering_alter_manufacturer_name_en_and_more.py  0002_remove_nendoroid_cooperation_remove_nendoroid_image_and_more.py  0003_rename_photo_nendoroidphoto_photourl.py
user/: admin.py  models.py  serializers.py  views.py
user/migrations/: 0001_initial.py  0002_profile.py
